Add Helm resources for EI-6.6.0